tat ca con lai...

--- a/src/main/resources/templates/blogs.html
+++ b/src/main/resources/templates/blogs.html
@@ -18,7 +18,7 @@
                                 <li>Blogs</li>
                             </ul>
                         </nav>
-                        <h4 class="title">About</h4>
+                        <h4 class="title">Blogs</h4>
                     </div>
                 </div>
             </div>
