--- a/src/main/resources/templates/cart/checkout.html
+++ b/src/main/resources/templates/cart/checkout.html
@@ -113,7 +113,7 @@
 										</div>
 										<div class="col-12" style="margin-top: 20px">
 											<div class="btn-box">
-												<button class="btn-shipping" ng-click="gioHang.purchase()">Xác nhận</button>
+												<button class="btn-shipping" ng-click="gioHang.purchase()">ĐẶT HÀNG</button>
 												<button class="btn-vnpay" ng-click="gioHang.getPaymentUrl()">VN Pay</button>
 												<a class="btn-return" th:href="@{/cart/view}">Giỏ hàng</a>
 											</div>
