--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,12 +8,11 @@
                 <div class="swiper-slide">
                     <div class="slider-content-area" data-bg-img="assets/img/slider/slider-04.png">
                         <div class="slider-content">
-                            <h5 class="sub-title">GIÁ TỐT : $866</h5>
+                            <h5 class="sub-title">GIÁ TỐT NHẤT THỊ TRƯỜNG</h5>
                             <h2 class="">SẢN PHẨM MỚI</h2>
-                            <h4>70% GIẢM GIÁ CHO FA</h4>
-                            <p>There are many variations of passages of Lorem Ipsum availables, but the majority have
-                                suffered alteration in some form.</p>
-                            <a class="btn-slider" href="/shop">Shop Now</a>
+                            <h4>Chào đón noel</h4>
+                            <p>A little more persistence, a little more effort, and what seemed hopeless failure may turn to glorious success.</p>
+                            <a class="btn-slider" href="/sanpham">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -22,9 +21,8 @@
                         <div class="slider-content">
                             <h5 class="sub-title">GIÁ TỐT : $866</h5>
                             <h2>SẢN PHẨM MỚI</h2>
-                            <h4>70% GIẢM GIÁ CHO FA</h4>
-                            <p>There are many variations of passages of Lorem Ipsum availables, but the majority have
-                                suffered alteration in some form.</p>
+                            <h4>Chào mừng tết</h4>
+                            <p>A little more persistence, a little more effort, and what seemed hopeless failure may turn to glorious success.</p>
                             <a class="btn-slider" href="/shop">Shop Now</a>
                         </div>
                     </div>
