--- a/src/main/resources/templates/layout/_menu.html
+++ b/src/main/resources/templates/layout/_menu.html
@@ -115,7 +115,7 @@
 												<a th:href="@{/admin}">Adminstrator</a>
 											</li>
 											<li>
-												<a th:href="@{/order/list}">Giỏ hàng</a>
+												<a th:href="@{/order/list}">Đơn hàng</a>
 											</li>
 											<li>
 												<a th:href="@{/auth/change-password}">Đổi mật khẩu</a>
